# imagecli

./: "test.jpg"-Single  .gitignore  Cargo.toml
rustlib/: components  manifest-cargo-x86_64-apple-darwin  manifest-clippy-preview-x86_64-apple-darwin  manifest-rls-preview-x86_64-apple-darwin  manifest-rust-analysis-x86_64-apple-darwin  manifest-rust-src  manifest-rust-std-wasm32-unknown-unknown  manifest-rust-std-x86_64-apple-darwin  manifest-rust-std-x86_64-unknown-linux-musl  manifest-rustc-x86_64-apple-darwin  multirust-channel-manifest.toml  multirust-config.toml
rustlib/wasm32-unknown-unknown/lib/: liballoc-3ad7188e526dda08.rlib  libbacktrace-df04d2299f2f8e28.rlib  libbacktrace_sys-87a120e5be939bc6.rlib  libcfg_if-1a5625b7df28182c.rlib  libcompiler_builtins-a30046ba00655967.rlib  libdlmalloc-39a71c5c99988946.rlib  libgetopts-587cf2bbf28b4b82.rlib  libhashbrown-fd5199061bda0fc4.rlib  liblibc-59945eb96c821df9.rlib  libpanic_abort-212dd0f5576b083a.rlib  libpanic_unwind-8f9ae828f411ab3f.rlib  librustc_demangle-6b8a088e8b7e8a8b.rlib  librustc_std_workspace_alloc-d7e03f542cb15881.rlib  librustc_std_workspace_core-b29fc8d64efc633b.rlib  librustc_std_workspace_std-e11224d8135cfdf3.rlib  libterm-17d8ee950efc4658.rlib  libtest-289962f0623feadc.rlib  libunicode_width-880bf7fb3fa90be2.rlib  libunwind-620bfeb965efa66b.rlib
rustlib/x86_64-apple-darwin/analysis/: liballoc-2d86762e16bb0a04.json  libbacktrace-d596ef0eda1858c6.json  libbacktrace_sys-0751e00fd6c3f355.json  libcfg_if-17058e548c4af711.json  libcompiler_builtins-1756ca15954acc6a.json  (+15 more)
src/: main.rs  resize.rs
(+41 files in other folders)
